test/files/pos/ypredef-multiple/C_2.scala
package mypackage.mysubpackage

object Test {
  val a: INT = 1234
  // ensure that predef is still available
  println("only with Predef")
}
