test/files/neg/ypredef-custom/C_2.scala
package mypackage.mysubpackage

object Test {
  val a: INT = 1234
  println("this should fail")
}
